Development towards Hackathon